Fix modal header spacing

--- a/packages/js/product-editor/src/components/product-mvp-feedback-modal/style.scss
+++ b/packages/js/product-editor/src/components/product-mvp-feedback-modal/style.scss
@@ -8,6 +8,10 @@
 		}
 	}
 
+	.components-modal__content {
+		margin-top: 108px;
+	}
+
 	legend {
 		font-size: 11px;
 		font-weight: 500;
